[project]
name = "arxiv-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "chromadb>=1.0.21",
    "gradio>=5.45.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.0",
]
